progressif/main/default/objects/Rate__c/Rate__c.object-meta.xml
<CustomObject>
    <label>Tarif</label>
    <nameField>
        <label>Nom du tarif</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tarifs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>