progressif/main/default/objects/Rate__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <label>Autorisation</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Tarifs</relationshipLabel>
    <relationshipName>ChildRate</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>