progressif/main/default/objects/Rate__c/fields/DutyFreeRealAmount__c.field-meta.xml
<CustomField>
    <fullName>DutyFreeRealAmount__c</fullName>
    <label>Montant HT réel</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>