progressif/main/default/objects/Rate__c/fields/DutyFreeTheoreticalAmount__c.field-meta.xml
<CustomField>
    <fullName>DutyFreeTheoreticalAmount__c</fullName>
    <label>Montant HT théorique</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>