progressif/main/default/objects/Rate__c/fields/RateType__c.field-meta.xml
<CustomField>
    <fullName>RateType__c</fullName>
    <label>Type de tarif</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RateType</valueSetName>
    </valueSet>
</CustomField>